# md2office

./: .cursorrules  .editorconfig  .gitignore  .pre-commit-config.yaml  KANBAN.md  LICENSE  README.md  debug_ast.py  debug_pptx.py  debug_pptx2.py  debug_pptx3.py  debug_pptx4.py  debug_pptx5.py  messedup.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_conversion.py  test_markdown_viewer.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  release.yml
artifacts/: cli-design-specification.md  cross-platform-build-guide.md  markdown-analysis.md  media-handling-specification.md  pdf-conversion-specification.md  powerpoint-conversion-specification.md  recipe-requirements.md  structural-mapping-specification.md  test-suite-specification.md  word-conversion-specification.md
artifacts/recipe-analysis-report/: gap-analysis-report.md  quality-assessment-report.md  recipe-summary-report.md
docs/: README.md  recipe-execution-guide.md  reorganization.md  ux-design.md  ux-expert-prompt.md
docs/archive/: README.md  documentation-audit.md  dry-run-report.md  file-requirements.md  implementation-status.md  implementation-summary.md  project-issues-report.md  swot-analysis.md  test-dry-run.md  world-class-recommendations.md
docs/developer/: build.md  entry-points.md  test-coverage.md  test-plan-file-operations.md  test-structure.md
docs/project/: kanban.md
docs/specs/artifacts/: conversion-architecture.md  formatting-specification.md  markdown-viewer-mermaid-requirements.md  markdown-viewer-requirements-prompt.md  quality-assurance-plan.md  recipe-definition.md  styling-guide.md
docs/specs/artifacts/recipe-analysis-report/: project-status-dashboard.md
docs/specs/personas/: 06-styling-and-formatting-expert.md  08-cli-and-cross-platform-build-specialist.md  09-quality-assurance-tester.md  10-recipe-manager.md  11-recipe-analyst.md
docs/user/: gui.md  llm-prompt-for-slide-generation.md  powerpoint-template-guide.md  quickstart.md  usage.md
examples/input/: formation-copilot-365-presentation-guide.md  formation-copilot-365.md  powerpoint-template.md  presentation-session-1-quick-wins.md  sample-with-mermaid.md  sample.md
personas/: 01-markdown-parser-specialist.md  02-document-structure-architect.md  03-word-document-specialist.md  04-powerpoint-specialist.md  05-pdf-generation-specialist.md  07-image-and-media-handler.md
scripts/: build.bat  build.py  build.sh  capture-screenshots.bat  capture-screenshots.py  capture-screenshots.sh  cleanup-build-artifacts.bat  cleanup-build-artifacts.sh  dry_run.py  pyinstaller.spec  start_application.bat  start_application.sh  update_readme_screenshots.py
src/: __init__.py
src/md2office/: __init__.py  __main__.py  cli_entry.py
src/md2office/cli/: __init__.py  main.py
src/md2office/config/: __init__.py  config.py
src/md2office/errors/: __init__.py  exceptions.py  logger.py
src/md2office/generators/: __init__.py  inline_formatter.py  pdf_generator.py  powerpoint_generator.py  word_generator.py
src/md2office/gui/: __init__.py  conversion_service.py  gui_main.py  main_window.py
src/md2office/gui/widgets/: __init__.py  markdown_editor.py  markdown_viewer.py
src/md2office/gui/workers/: __init__.py  conversion_worker.py
src/md2office/parser/: __init__.py  ast_builder.py  markdown_parser.py
src/md2office/router/: __init__.py  content_router.py  pipeline.py
src/md2office/styling/: __init__.py  style.py
tests/: __init__.py  test_cli.py
tests/config/: test_config.py
tests/errors/: test_errors.py
tests/generators/: test_pdf_generator.py  test_powerpoint_generator.py  test_word_generator.py
tests/gui/: test_gui.py
tests/parser/: test_parser.py
tests/router/: test_router.py
tests/styling/: test_styling.py
